style.css
*{
    box-sizing: border-box;
    padding:0;
    margin:0;
}

body{
    text-align: center;
    margin: 1em 2em;
}
header{
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 800px;
    margin: 0 auto;
}
form input[type="text"]{
    width: 35ch;
    padding: 0.5em 1.5em;

}

form button{
    padding: 0.5em 1.5em;
    cursor:pointer;
}

.alert{
    display: none;
    margin-top: 2rem;
    background-color: red;
    padding: 1em;
    width:60ch;
    color: white;
    border-radius: 1rem;
}
.alert-on{
    display: block;
}

.pokemons{
    display: grid;
    place-content: center;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    max-width: 800px;
    gap: 1.5rem;
    margin: 1rem auto 0;
}

.container{
    border: 2px solid black;
    min-width: 250px;
    max-width: 400px;
    padding: 1em 2em;
    border-radius: 10%;
    background-color: hsl(270,5%,85%);
}

.container > span{
    display:block;
    opacity: 0.7;
    
}

.container img{
    width: 200px;
    height: 200px;
}

.types{
    margin-top: 1em;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.types > span{
    width: 10ch;
    padding: 0.25em 0;
    color:white;
    text-shadow: -1px -1px 1px black, -1px 1px 1px black, 1px -1px 1px black,1px 1px 1px black;
    border-radius: 2rem;
    border: 1px solid white;
}
.graph{
    margin-top: 1em;
    border:2px solid black;
    
}
.bar:hover{
    fill-opacity: 0.7;
    transition: fill-opacity 0.3s ease;
}

